<resources>
    <string name="app_name">LocationManager</string>
    <string name="gps_location_label">We need GPS permission so that we can retrieve your accurate location.</string>
    <string name="allow_permissions">Allow permissions</string>
    <string name="permission_note"><font size="20">*</font> GPS drains battery so don\'t keep GPS on for long time.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="g_mail">G-mail</string>
    <string name="continue_label">Continue</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>

    <string name="google_api_key">AIzaSyDAkXJkyBlOtfI8S0rxjW-9PYYw3O1kUoQ</string>
    <string name="location_update">Location Update</string>
    <string name="remove_location">Remove location</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="map_type">Map type</string>
    <string name="start_chat">Start Chat</string>
    <string name="start_typing"><font size="12">Start typing</font></string>
</resources>